// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logCopyGeneratedAnswer with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "copyToClipboard",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logDislikeGeneratedAnswer with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "dislike",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logGeneratedAnswerCollapse with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "collapse",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logGeneratedAnswerExpand with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "expand",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logGeneratedAnswerFeedback with the right payload 1`] = `
[
  "Rga.SubmitFeedback",
  {
    "additionalNotes": undefined,
    "correctAnswerUrl": undefined,
    "details": {
      "correctTopic": false,
      "documented": true,
      "hallucinationFree": undefined,
      "readable": true,
    },
    "helpful": true,
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logGeneratedAnswerHideAnswers with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "hide",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logGeneratedAnswerShowAnswers with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "show",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logHoverCitation with the right payload 1`] = `
[
  "Rga.CitationHover",
  {
    "citationHoverTimeInMs": 100,
    "citationId": "citation_id",
    "itemMetadata": {
      "title": "example title",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "citation_permanentid",
      "url": "example: click uri",
    },
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logLikeGeneratedAnswer with the right payload 1`] = `
[
  "Rga.AnswerAction",
  {
    "action": "like",
    "responseId": "456",
  },
]
`;

exports[`generated answer insight analytics actions > when analyticsMode is \`next\` > should log #logOpenGeneratedAnswerSource with the right payload 1`] = `
[
  "Rga.CitationClick",
  {
    "citationId": "citation_id",
    "itemMetadata": {
      "title": "example title",
      "uniqueFieldName": "permanentid",
      "uniqueFieldValue": "citation_permanentid",
      "url": "example: click uri",
    },
    "responseId": "456",
  },
]
`;
